Code/syntax.output
State 8 conflicts: 1 reduce/reduce
State 14 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier ExtDecList error
    9       | Specifier error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT OptTag LC DefList error
   18                | STRUCT OptTag error DefList RC

   19 OptTag: ID
   20       | %empty

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB INT error

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP VarList error
   28       | ID LP error
   29       | ID error RP
   30       | ID error

   31 VarList: ParamDec COMMA VarList
   32        | ParamDec

   33 ParamDec: Specifier VarDec

   34 CompSt: LC DefList StmtList RC
   35       | LC DefList StmtList error

   36 StmtList: Stmt StmtList
   37         | %empty

   38 Stmt: Exp SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt
   42     | IF LP Exp RP Stmt ELSE Stmt
   43     | WHILE LP Exp RP Stmt
   44     | Exp error
   45     | RETURN Exp error

   46 DefList: Def DefList
   47        | %empty

   48 Def: Specifier DecList SEMI
   49    | Specifier DecList error

   50 DecList: Dec
   51        | Dec COMMA DecList

   52 Dec: VarDec
   53    | VarDec ASSIGNOP Exp
   54    | error

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp OR Exp
   57    | Exp AND Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT
   73    | error

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 12 17 18 24 27 28 29 30 35 44 45 49 54 73
INT (258) 23 24 71
FLOAT (259) 72
ID (260) 19 21 22 25 26 27 28 29 30 66 67 69 70
TYPE (261) 13
SEMI (262) 4 5 7 38 40 48
COMMA (263) 11 31 51 74
ASSIGNOP (264) 53 55
RELOP (265) 58
PLUS (266) 59
MINUS (267) 60 64
STAR (268) 61
DIV (269) 62
AND (270) 57
OR (271) 56
DOT (272) 69
NOT (273) 65
LP (274) 25 26 27 28 41 42 43 63 66 67
RP (275) 25 26 29 41 42 43 63 66 67
LB (276) 23 24 68
RB (277) 23 68
LC (278) 15 17 34 35
RC (279) 15 18 34
STRUCT (280) 15 16 17 18
RETURN (281) 40 45
IF (282) 41 42
ELSE (283) 42
WHILE (284) 43
LOWER_THEN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (35)
    on left: 10 11 12, on right: 4 8 11 12
Specifier (36)
    on left: 13 14, on right: 4 5 6 7 8 9 33 48 49
StructSpecifier (37)
    on left: 15 16 17 18, on right: 14
OptTag (38)
    on left: 19 20, on right: 15 17 18
Tag (39)
    on left: 21, on right: 16
VarDec (40)
    on left: 22 23 24, on right: 10 11 12 23 24 33 52 53
FunDec (41)
    on left: 25 26 27 28 29 30, on right: 6 7
VarList (42)
    on left: 31 32, on right: 25 27 31
ParamDec (43)
    on left: 33, on right: 31 32
CompSt (44)
    on left: 34 35, on right: 6 39
StmtList (45)
    on left: 36 37, on right: 34 35 36
Stmt (46)
    on left: 38 39 40 41 42 43 44 45, on right: 36 41 42 43
DefList (47)
    on left: 46 47, on right: 15 17 18 34 35 46
Def (48)
    on left: 48 49, on right: 46
DecList (49)
    on left: 50 51, on right: 48 49 51
Dec (50)
    on left: 52 53 54, on right: 50 51
Exp (51)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73, on right: 38 40 41 42 43 44 45 53 55 56 57 58 59 60 61 62 63
    64 65 68 69 74 75
Args (52)
    on left: 74 75, on right: 66 74


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 2

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag
   17                | STRUCT . OptTag LC DefList error
   18                | STRUCT . OptTag error DefList RC

    ID  shift, and go to state 8

    $default  reduce using rule 20 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . ExtDecList error
    9       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 8

   19 OptTag: ID .
   21 Tag: ID .

    error     reduce using rule 19 (OptTag)
    error     [reduce using rule 21 (Tag)]
    ID        reduce using rule 21 (Tag)
    SEMI      reduce using rule 21 (Tag)
    $default  reduce using rule 19 (OptTag)


State 9

   15 StructSpecifier: STRUCT OptTag . LC DefList RC
   17                | STRUCT OptTag . LC DefList error
   18                | STRUCT OptTag . error DefList RC

    error  shift, and go to state 19
    LC     shift, and go to state 20


State 10

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    9 ExtDef: Specifier error .

    $default  reduce using rule 9 (ExtDef)


State 14

   22 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP VarList error
   28       | ID . LP error
   29       | ID . error RP
   30       | ID . error

    error  shift, and go to state 21
    LP     shift, and go to state 22

    error  [reduce using rule 22 (VarDec)]
    SEMI   reduce using rule 22 (VarDec)
    COMMA  reduce using rule 22 (VarDec)
    LB     reduce using rule 22 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error

    error  shift, and go to state 23
    SEMI   shift, and go to state 24


State 17

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   12           | VarDec . error ExtDecList
   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB INT error

    error  shift, and go to state 25
    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    error  [reduce using rule 10 (ExtDecList)]
    SEMI   reduce using rule 10 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 28
    LC    shift, and go to state 29

    CompSt  go to state 30


State 19

   18 StructSpecifier: STRUCT OptTag error . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 32
    Def              go to state 33


State 20

   15 StructSpecifier: STRUCT OptTag LC . DefList RC
   17                | STRUCT OptTag LC . DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 34
    Def              go to state 33


State 21

   29 FunDec: ID error . RP
   30       | ID error .

    RP  shift, and go to state 35

    $default  reduce using rule 30 (FunDec)


State 22

   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . VarList error
   28       | ID LP . error

    error   shift, and go to state 36
    TYPE    shift, and go to state 1
    RP      shift, and go to state 37
    STRUCT  shift, and go to state 2

    Specifier        go to state 38
    StructSpecifier  go to state 7
    VarList          go to state 39
    ParamDec         go to state 40


State 23

    8 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 8 (ExtDef)


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   12 ExtDecList: VarDec error . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 17


State 26

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 43
    VarDec      go to state 17


State 27

   23 VarDec: VarDec LB . INT RB
   24       | VarDec LB . INT error

    INT  shift, and go to state 44


State 28

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 29

   34 CompSt: LC . DefList StmtList RC
   35       | LC . DefList StmtList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 33


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   48 Def: Specifier . DecList SEMI
   49    | Specifier . DecList error

    error  shift, and go to state 46
    ID     shift, and go to state 41

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 32

   18 StructSpecifier: STRUCT OptTag error DefList . RC

    RC  shift, and go to state 50


State 33

   46 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 7
    DefList          go to state 51
    Def              go to state 33


State 34

   15 StructSpecifier: STRUCT OptTag LC DefList . RC
   17                | STRUCT OptTag LC DefList . error

    error  shift, and go to state 52
    RC     shift, and go to state 53


State 35

   29 FunDec: ID error RP .

    $default  reduce using rule 29 (FunDec)


State 36

   28 FunDec: ID LP error .

    $default  reduce using rule 28 (FunDec)


State 37

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 38

   33 ParamDec: Specifier . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 54


State 39

   25 FunDec: ID LP VarList . RP
   27       | ID LP VarList . error

    error  shift, and go to state 55
    RP     shift, and go to state 56


State 40

   31 VarList: ParamDec . COMMA VarList
   32        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 32 (VarList)


State 41

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


State 42

   12 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 44

   23 VarDec: VarDec LB INT . RB
   24       | VarDec LB INT . error

    error  shift, and go to state 58
    RB     shift, and go to state 59


State 45

   34 CompSt: LC DefList . StmtList RC
   35       | LC DefList . StmtList error

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 29
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69

    error  [reduce using rule 37 (StmtList)]
    RC     reduce using rule 37 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 71
    Stmt      go to state 72
    Exp       go to state 73


State 46

   54 Dec: error .

    $default  reduce using rule 54 (Dec)


State 47

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB INT error
   52 Dec: VarDec .
   53    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 27

    $default  reduce using rule 52 (Dec)


State 48

   48 Def: Specifier DecList . SEMI
   49    | Specifier DecList . error

    error  shift, and go to state 75
    SEMI   shift, and go to state 76


State 49

   50 DecList: Dec .
   51        | Dec . COMMA DecList

    COMMA  shift, and go to state 77

    $default  reduce using rule 50 (DecList)


State 50

   18 StructSpecifier: STRUCT OptTag error DefList RC .

    $default  reduce using rule 18 (StructSpecifier)


State 51

   46 DefList: Def DefList .

    $default  reduce using rule 46 (DefList)


State 52

   17 StructSpecifier: STRUCT OptTag LC DefList error .

    $default  reduce using rule 17 (StructSpecifier)


State 53

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 54

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB INT error
   33 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 33 (ParamDec)


State 55

   27 FunDec: ID LP VarList error .

    $default  reduce using rule 27 (FunDec)


State 56

   25 FunDec: ID LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 57

   31 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 38
    StructSpecifier  go to state 7
    VarList          go to state 78
    ParamDec         go to state 40


State 58

   24 VarDec: VarDec LB INT error .

    $default  reduce using rule 24 (VarDec)


State 59

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


State 60

   73 Exp: error .

    $default  reduce using rule 73 (Exp)


State 61

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 62

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 63

   66 Exp: ID . LP Args RP
   67    | ID . LP RP
   70    | ID .

    LP  shift, and go to state 79

    $default  reduce using rule 70 (Exp)


State 64

   64 Exp: MINUS . Exp

    error  shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 80


State 65

   65 Exp: NOT . Exp

    error  shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 81


State 66

   63 Exp: LP . Exp RP

    error  shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 82


State 67

   40 Stmt: RETURN . Exp SEMI
   45     | RETURN . Exp error

    error  shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 83


State 68

   41 Stmt: IF . LP Exp RP Stmt
   42     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 84


State 69

   43 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 85


State 70

   39 Stmt: CompSt .

    $default  reduce using rule 39 (Stmt)


State 71

   34 CompSt: LC DefList StmtList . RC
   35       | LC DefList StmtList . error

    error  shift, and go to state 86
    RC     shift, and go to state 87


State 72

   36 StmtList: Stmt . StmtList

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 29
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69

    error  [reduce using rule 37 (StmtList)]
    RC     reduce using rule 37 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 88
    Stmt      go to state 72
    Exp       go to state 73


State 73

   38 Stmt: Exp . SEMI
   44     | Exp . error
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . OR Exp
   57    | Exp . AND Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    error     shift, and go to state 89
    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100


State 74

   53 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 101


State 75

   49 Def: Specifier DecList error .

    $default  reduce using rule 49 (Def)


State 76

   48 Def: Specifier DecList SEMI .

    $default  reduce using rule 48 (Def)


State 77

   51 DecList: Dec COMMA . DecList

    error  shift, and go to state 46
    ID     shift, and go to state 41

    VarDec   go to state 47
    DecList  go to state 102
    Dec      go to state 49


State 78

   31 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 31 (VarList)


State 79

   66 Exp: ID LP . Args RP
   67    | ID LP . RP

    error  shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66
    RP     shift, and go to state 103

    Exp   go to state 104
    Args  go to state 105


State 80

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . OR Exp
   57    | Exp . AND Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   64    | MINUS Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    STAR  shift, and go to state 95
    DIV   shift, and go to state 96
    DOT   shift, and go to state 99
    LB    shift, and go to state 100

    $default  reduce using rule 64 (Exp)


State 81

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . OR Exp
   57    | Exp . AND Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   65    | NOT Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100

    $default  reduce using rule 65 (Exp)


State 82

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . OR Exp
   57    | Exp . AND Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   63    | LP Exp . RP
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    RP        shift, and go to state 106
    LB        shift, and go to state 100


State 83

   40 Stmt: RETURN Exp . SEMI
   45     | RETURN Exp . error
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . OR Exp
   57    | Exp . AND Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
